>>- 1.3 -<< _ajout des liens de changement de langue _Update des traductions _exclusion du footer dans la base

--- a/src/projetIHM/gestionMairieBundle/Resources/translations/messages.en.yml
+++ b/src/projetIHM/gestionMairieBundle/Resources/translations/messages.en.yml
@@ -35,3 +35,10 @@ Supprimer: Delete
 'marié avec': 'maried with'
 Divorcer: Divorce
 'né le': 'born the'
+Valider: Confirm
+'Gérer les déménagements': 'Relocation management'
+'Ajouter des personnes': 'Add people'
+'Déstiné aux mairie afin de gerer les personnes': 'Intended for town hall to manage their people'
+'Formulaire d''une personne': 'Person form'
+'Modifier des personnes': 'Modify people'
+'Modifier une personne': 'Modify person'
