--- a/src/projetIHM/gestionMairieBundle/Resources/translations/messages.en.yml
+++ b/src/projetIHM/gestionMairieBundle/Resources/translations/messages.en.yml
@@ -42,3 +42,4 @@ Valider: Confirm
 'Formulaire d''une personne': 'Person form'
 'Modifier des personnes': 'Modify people'
 'Modifier une personne': 'Modify person'
+Déconnexion: Logout
