--- a/src/projetIHM/gestionMairieBundle/Resources/translations/messages.fr.yml
+++ b/src/projetIHM/gestionMairieBundle/Resources/translations/messages.fr.yml
@@ -42,3 +42,4 @@ Valider: Valider
 'Formulaire d''une personne': 'Formulaire d''une personne'
 'Modifier des personnes': 'Modifier des personnes'
 'Modifier une personne': 'Modifier une personne'
+Déconnexion: Déconnexion
